--- a/index.html
+++ b/index.html
@@ -102,61 +102,146 @@
       </div>
 
       <div class="calendario-body">
-        <div class="border-r border-b text-gray-500 px-2 py-2">28</div>
-        <div class="border-r border-b text-gray-500 px-2 py-2">29</div>
-        <div class="border-r border-b text-gray-500 px-2 py-2">30</div>
-        <div class="border-r border-b px-2 py-2">1</div>
-        <div class="border-r border-b px-2 py-2">2</div>
-        <div class="border-r border-b px-2 py-2">3</div>
-        <div class="border-r border-b px-2 py-2">4</div>
-        <div class="border-r border-b px-2 py-2">5</div>
-        <div class="border-r border-b px-2 py-2">6</div>
-        <div class="border-r border-b px-2 py-2">7</div>
-        <div class="border-r border-b px-2 py-2">8</div>
-        <div class="border-r border-b px-2 py-2">9</div>
-        <div class="border-r border-b px-2 py-2">10</div>
-        <div class="border-r border-b px-2 py-2">11</div>
-        <div class="border-r border-b px-2 py-2">12</div>
-        <div class="border-2 border-blue-900 shadow bg-orange-100 px-2 py-2">
+        <button class="border-r border-b text-gray-500 px-2 py-2">28</button>
+        <button class="border-r border-b text-gray-500 px-2 py-2">29</button>
+        <button class="border-r border-b text-gray-500 px-2 py-2">30</button>
+        <button class="border-r border-b px-2 py-2">1</button>
+        <button class="border-r border-b px-2 py-2">2</button>
+        <button class="border-r border-b px-2 py-2">3</button>
+        <button class="border-r border-b px-2 py-2">4</button>
+        <button class="border-r border-b px-2 py-2">5</button>
+        <button class="border-r border-b px-2 py-2">6</button>
+        <button class="border-r border-b px-2 py-2">7</button>
+        <button class="border-r border-b px-2 py-2">8</button>
+        <button class="border-r border-b px-2 py-2">9</button>
+        <button class="border-r border-b px-2 py-2">10</button>
+        <button class="border-r border-b px-2 py-2">11</button>
+        <button class="border-r border-b px-2 py-2">12</button>
+        <button
+          class="border-2 border-blue-900 shadow bg-orange-100 px-2 py-2 add-task"
+        >
           13
-        </div>
-        <div class="border-r border-b px-2 py-2">14</div>
-        <div class="border-r border-b px-2 py-2">15</div>
-        <div class="border-r border-b px-2 py-2">16</div>
-        <div class="border-r border-b px-2 py-2">17</div>
-        <div class="border-r border-b px-2 py-2">18</div>
-        <div class="border-r border-b px-2 py-2">19</div>
-        <div class="border-r border-b px-2 py-2">20</div>
-        <div class="border-r border-b px-2 py-2">21</div>
-        <div class="border-r border-b px-2 py-2">22</div>
-        <div class="border-r border-b px-2 py-2">23</div>
-        <div class="border-r border-b px-2 py-2">24</div>
-        <div class="border-r border-b px-2 py-2">25</div>
-        <div class="border-r border-b px-2 py-2">26</div>
-        <div class="border-r border-b px-2 py-2">27</div>
-        <div class="border-r border-b px-2 py-2">28</div>
-        <div class="border-r border-b px-2 py-2">29</div>
-        <div class="border-r border-b px-2 py-2">30</div>
-        <div class="border-r border-b px-2 py-2">31</div>
-        <div class="border-r border-b text-gray-500 px-2 py-2">1</div>
+        </button>
+        <button class="border-r border-b px-2 py-2">14</button>
+        <button class="border-r border-b px-2 py-2">15</button>
+        <button class="border-r border-b px-2 py-2">16</button>
+        <button class="border-r border-b px-2 py-2">17</button>
+        <button class="border-r border-b px-2 py-2">18</button>
+        <button class="border-r border-b px-2 py-2">19</button>
+        <button class="border-r border-b px-2 py-2">20</button>
+        <button class="border-r border-b px-2 py-2">21</button>
+        <button class="border-r border-b px-2 py-2">22</button>
+        <button class="border-r border-b px-2 py-2">23</button>
+        <button class="border-r border-b px-2 py-2">24</button>
+        <button class="border-r border-b px-2 py-2">25</button>
+        <button class="border-r border-b px-2 py-2">26</button>
+        <button class="border-r border-b px-2 py-2">27</button>
+        <button class="border-r border-b px-2 py-2">28</button>
+        <button class="border-r border-b px-2 py-2">29</button>
+        <button class="border-r border-b px-2 py-2">30</button>
+        <button class="border-r border-b px-2 py-2">31</button>
+        <button class="border-r border-b text-gray-500 px-2 py-2">1</button>
       </div>
     </div>
 
     <!-- Menu sidebar - cambiar display a none para ocultarlo y block para mostrarlo -->
     <div
-      class="fixed right-0 top-0 w-4/5 bg-teal-400 h-screen shadow text-dark"
-      style="display: none"
+      class="fixed right-0 top-0 w-4/5 bg-white h-screen shadow text-dark"
+      style="display: grid; grid-template-rows: 60px 1fr"
     >
-      <div class="w-full h-20 border flex items-center px-2">
-        <strong class="font-bold">08:00 </strong>
-        <span class="ml-2 font-medium text-dark">Reunion con los pibes</span>
+      <div class="border-b h-full flex items-center justify-between px-4">
+        <span class="text-xl">Tareas del dia</span>
+        <div
+          class="hover:bg-gray-500 rounded-full bg-gray-600 flex text-white cursor-pointer"
+        >
+          <svg
+            width="1.5em"
+            height="1.5em"
+            viewBox="0 0 16 16"
+            class="bi bi-plus"
+            fill="white"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z"
+            />
+            <path
+              fill-rule="evenodd"
+              d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"
+            />
+          </svg>
+        </div>
       </div>
 
-      <div>
-        <textarea class="bg-gray-200" name="textarea" rows="10" cols="50">
-              Escribir</textarea
-        >
+      <div class="flex h-full w-full p-4">
+        <div class="h-full w-2 border-r-2 border-blue-300"></div>
+        <div class="h-full w-full ml-2">
+          <div
+            class="flex bg-gray-200 border border-gay-300 rounded text-sm p-1"
+          >
+            <div class="flex flex-col justify-between h-full">
+              <span class="text-gray-700">08:00</span>
+              <span
+                class="bg-blue-300 rounded-full w-3 h-3"
+                style="margin-left: -1.225rem"
+              ></span>
+              <span class="text-gray-700">10:00</span>
+            </div>
+
+            <div class="ml-2 text-xs">
+              <strong>Reunion con mi amigo Marquitos.</strong>
+              <div class="mt-2">
+                Tengo que hablar por un aumento de sueldo a Nahuel. Nota: Pienso
+                que quiere despedir a Nahuel. Espero que safe
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="flex bg-gray-200 border border-gay-300 rounded text-sm p-1  mt-4"
+          >
+            <div class="flex flex-col justify-between h-full">
+              <span class="text-gray-700">14:00</span>
+              <span
+                class="bg-blue-300 rounded-full w-3 h-3"
+                style="margin-left: -1.225rem"
+              ></span>
+              <span class="text-gray-700">18:00</span>
+            </div>
+
+            <div class="ml-2 text-xs">
+              <strong>Reunion con Nahuel.</strong>
+              <div class="mt-2">
+                Bono por terminar el calendario
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- En caso de no tener tareas mostrar esto -->
+        <!-- <div class="h-full w-full flex justify-center items-center">
+          <img src="nohaytarea.jpg" alt="" />
+        </div> -->
       </div>
     </div>
+
+    <!-- <div
+      class="fixed left-0 top-0 flex justify-center items-center w-screen h-screen"
+    >
+
+    
+      <div class="w-64 p-4 bg-white rounded shadow-lg border">
+        <div class="text-xl">
+          Nueva tarea
+        </div>
+
+        <div class="px-2">
+          <form>
+            <textarea name="" id=""></textarea>
+          </form>
+        </div>
+      </div>
+    </div> -->
   </body>
 </html>
